--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       </nav>
       <div class="redes_subscripcion">
         <div class="redes_footer">
-          <a><img src="./assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
-          <a><img src="./assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
+          <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="./assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
+          <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="./assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
           <a><img src="./assets/redes-sociales/whatsapp.png" alt="Logo Whatsapp"></a>
         </div>
       </div>
