--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -95,8 +95,8 @@
         </nav>
         <div class="redes_subscripcion">
           <div class="redes_footer">
-            <a href="https://www.instagram.com/importacionessiri/" target="_blank"><img src="../assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
-            <a href="https://www.facebook.com/importacionessiri" target="_blank"><img src="../assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
+            <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="./assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="./assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
             <a href="https://wa.link/de7a89" target="_blank"><img src="../assets/redes-sociales/whatsapp.png" alt="Logo Whatsapp"></a>
           </div>
         </div>
