se actualizaron algunas imágenes y se borraron los link de whatsapp

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Compra seguro en nuestra tienda online y recibilo en tu domicilio en Argentina. Con pocos clicks tendrás tu pedido en poco tiempo, 100% seguro.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Apple, Fotografía profesional, Accesorios Fotográficos, iPhone, iPad, Nikon, Canon, Sony">
+  <meta name="robots" content="index, follow">
   <link rel="shortcut icon" href="./assets/favicom2.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css">
   <script src="https://kit.fontawesome.com/5f6666b2e1.js" crossorigin="anonymous"></script>
@@ -78,7 +79,7 @@
         </a>
       </div>
       <div class="categoria_mayorista">
-        <a href="https://wa.link/de7a89" target="_blank">
+        <a href="" target="_blank">
           <h3>Venta Mayorista</h3>
           <img src="./assets/Inicio/store.png" alt=" Sección Mayorista">
         </a>
