--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Nuestros medios de contacto al alcance de tu mano">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Apple, Fotografía profesional, Accesorios Fotográficos, iPhone, iPad, Nikon, Canon, Sony">
+    <meta name="robots" content="index, follow">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="shortcut icon" href="../assets/favicom2.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -84,8 +85,8 @@
         </nav>
         <div class="redes_subscripcion">
           <div class="redes_footer">
-            <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="./assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="./assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
+            <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="../assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="../assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
             <a><img src="../assets/redes-sociales/whatsapp.png" alt="Logo Whatsapp"></a>
           </div>
         </div>
