--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Toda nuestra lista de productos, que podés conseguirla en pocos clicks">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Apple, Fotografía profesional, Accesorios Fotográficos, iPhone, iPad, Nikon, Canon, Sony">
+    <meta name="robots" content="index, follow">
     <link rel="shortcut icon" href="../assets/favicom2.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/5f6666b2e1.js" crossorigin="anonymous"></script>
@@ -74,8 +75,8 @@
         </nav>
         <div class="redes_subscripcion">
           <div class="redes_footer">
-            <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="./assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="./assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
+            <a href="https://www.instagram.com/depoot.importaciones/" target="_blank"><img src="../assets/redes-sociales/instagram.png" alt="Logo Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=61560055000589" target="_blank"><img src="../assets/redes-sociales/facebook.png" alt="Logo Facebook"></a>
             <a><img src="../assets/redes-sociales/whatsapp.png" alt="Logo Whatsapp"></a>
           </div>
         </div>
